--- a/_posts/0000-01-02-Ratheshan03.md
+++ b/_posts/0000-01-02-Ratheshan03.md
@@ -3,5 +3,5 @@ layout: slide
 title: "Welcome to our Ratheshan03's slide!"
 ---
 
-This is Ratheshan03's slide
+This is my Awesome slide
 Use the left arrow to go back!
